--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/hglasser/In-Your-Fridge#readme",
   "dependencies": {
     "express": "^4.16.3",
-    "jsonwebtoken": "^8.3.0"
+    "jsonwebtoken": "^8.3.0",
+    "pg-promise": "^8.4.6"
   }
 }
